# nops

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yml  test.yml
example/: .sops-kdf.yaml  flake.nix
nops/: main.py
sops_kdf/: main.py
tests/: README.md  __init__.py  test_nops.py
