[tool.poetry]
name = "nops"
version = "0.2.0"
description = "Simple SOPS key management"
authors = ["You"]
packages = [{include = "nops"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.scripts]
nops = "nops.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
