[project]
name = "nops"
version = "0.2.0"
description = "Simple SOPS key management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
nops = "nops.main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"
